--- a/06_OrgX_Plugin/setup.html
+++ b/06_OrgX_Plugin/setup.html
@@ -14,16 +14,24 @@
 <h4>1 - SETUP</h4>
 
 <div id="content">
-<p>Organisation X needs a repository to be set up to manage their digital records, and in doing so they will be using Xena to preserve them for the ages. Organisation X will be storing office documents and Foo records, so they will be using the Foo plugin developed in the first part of the tutorial, and the office plugin, developed by the National Archives of Australia as part of the Digital Preservation Project. The Office plugin is available from SourceForge, along with Xena. This sounds like a simple assignment!</p>
+<p>Organisation X needs a repository to be set up to manage their digital records, and in doing so they will be using Xena 
+to preserve them for the ages. Organisation X will be storing office documents and Foo records, so they will be using the Foo plugin 
+developed in the first part of the tutorial, and the office plugin, developed by the National Archives of Australia as part of the 
+Digital Preservation Project. The Office plugin is available from SourceForge, along with Xena. This sounds like a simple assignment!</p>
 
 <h4>Complications</h4>
-<p>Unfortunately, things are rarely as simple as they first sound. Records coming into the repository need to be named appropriately, and during preservation, meta data specific to the record and Organisation X needs to be added. To make this possible, Organisation X is creating it's very own FileNamer and MetaDataWrapper plugin, to be used with Xena. These components will live in the Organisation X plugin - which will be called, "orgx".
+<p>Unfortunately, things are rarely as simple as they first sound. Records coming into the repository need to be named appropriately, 
+and during preservation, meta data specific to the record and Organisation X needs to be added. To make this possible, Organisation X 
+is creating its very own FileNamer and MetaDataWrapper plugin, to be used with Xena. These components will live in the Organisation X plugin - 
+which will be called, "orgx".
 </p>
 
 <h4>Deja-Vu</h4>
-To create the orgx plugin, we are going perform the same process that we did to create the foo plugin. The following steps are identical to those for the creation of the foo plugin, excepting that the name has changed from 'foo' to 'orgx.
+To create the orgx plugin, we are going perform the same process that we did to create the foo plugin. The following steps are identical 
+to those for the creation of the foo plugin, excepting that the name has changed from 'foo' to 'orgx.
 
 <h4>First Steps </h4>
+
 The very first step we will undertake is to create an outline of the
 plugin that will be loaded by Xena. Xena expects plugins to be loaded
 as JAR files, laid out in a specific way. To aid in this, the Apache
@@ -35,12 +43,13 @@ folder, and designated by "~/" so our plugin will be contained in
 to something like "C:\Documents and Settings\UserName\My Documents".
 <br>
 
+<br>
+
 So to start off with, we get all the components we need to make a
 plugin. The first is the "name.properties" file. This file should be
 loaded in the base directory of the JAR file, and should contain the
-fully qualified name of the package where the Java classes that are
-doing the work in the plugin will live. In this example, we will be
-putting all our classes in the package:<br>
+fully qualified name of the plugin loader class, which is the class that will load all the components of the plugin.
+In this example, we will be putting all our classes in the package:<br>
 
 <br>
 
@@ -48,18 +57,12 @@ au.gov.naa.digipres.xena.demo.orgx<br>
 
 <br>
 
-At this stage, the name.properties file should contain the name of the
-package with '/'s instead of '.'s. Nobody knows why this is, but if we
-find out, we will let you know.
-So here is the content of our name.properties file:
-<pre>name=au/gov/naa/digipres/xena/demo/orgx<br></pre>
+The plugin class loader will be called OrgXPlugin. So here is the content of our name.properties file:
+<pre>classname=au.gov.naa.digipres.xena.demo.orgx.OrgXPlugin<br></pre>
 
-Thats it! Just the name of the package where we can expect to find the
-bits of the plugin that will be doing the work with slashes instead of
-dots for separators. The next thing we have
-to do is create the source folder for the package, and put the
-preferences.properties file inside that. <br/>
+The next thing we have to do is create the source folder for the package, and put&nbsp;the name.properties file inside that. <br>
 
+<br>
 
 In this example, the source will be
 created in the folder named 'src', and the output of any compiling will
@@ -68,7 +71,12 @@ configuration files will be put into a folder named 'etc', and finally,
 any required external libraries (probably in JAR form) will be stored
 in the 'ext' folder. At the end of setting up our folder structure, we
 should have the following entries in the "~/orgx_plugin" folder:
-<pre> - /bin<br> - /dist<br> - /etc<br> - /ext<br> - /src<br> - name.properties<br></pre>
+<pre> - /bin
+<br> - /dist
+<br> - /etc
+<br> - /src
+<br> - name.properties
+<br></pre>
 
 Now, to make this all happen simply, we will create an Ant build file
 to do it all automatically. A sample build file is available here. Of
@@ -76,67 +84,72 @@ note in the build file are the following sections.
 First up, we will set up a bunch of properties to set the name of the
 plugin, and match the folder structure used in our project.
 <div id="ant">
-<pre>&#60property name="pluginname" value="orgx"/&#62
-&#60property name="srcdir" value="src"/&#62
-&#60property name="etcdir" value="etc"/&#62
-&#60property name="builddir" value="bin"/&#62
-&#60property name="distdir" value="dist"/&#62
-&#60property name="extdir" value="ext"/&#62</pre>
+<pre>&#60;property name="pluginname" value="orgx"/&#62;
+&#60;property name="srcdir" value="src"/&#62;
+&#60;property name="etcdir" value="etc"/&#62;
+&#60;property name="builddir" value="bin"/&#62;
+&#60;property name="distdir" value="dist"/&#62;
+</pre>
+
 </div>
 
 Now we set the location of the xena.jar file in a property named,
 appropriately, xenajarlocation. This is the most likely property to
 need changing, unless you happen to have the xena file in the same
-relative
-location.
+relative location.<br>
+This guide assumes that you have already built the xena.jar file. If this is not the case, please follow
+the <a href="http://xena.sourceforge.net/build.php">build guide</a> on the 
+<a href="http://xena.sourceforge.net">Xena website</a> in order to do so.<br>
+The default location for the xena.jar file is the xena directory of the root plugin-howto directory.
+
 <div id="ant">
 <pre>
-&#60!-- required project jar files --&#62
-&#60property name="xenajarlocation" value="../../xena/xena.jar" /&#62
+&#60;!-- required project jar files --&#62;
+&#60;property name="xenajarlocation" value="../../xena/xena.jar" /&#62;
 </pre>
+
 </div>
 
 The next thing we do is create the compile path, to be used when
 compiling our plugins.
 <div id="ant">
 <pre>
-&#60path id="compile.path"&#62
-	&#60fileset dir="ext"&#62
-		&#60include name="**/*.jar"/&#62
-	&#60/fileset&#62
-	&#60pathelement location="${xenajar}"/&#62
-&#60/path&#62
+&#60;path id="compile.path"&#62;
+	&#60;pathelement location="${xenajar}"/&#62;
+&#60;/path&#62;
+
 </pre>
+
 </div>
 
 Then the actual compile job itself, broken into a couple of lines.
 <div id="ant">
-<pre>&#60target name="compile" description="--&#62Compile the .java sources"&#62
-		&#60javac srcdir="${srcdir}" destdir="${builddir}" debug="on"
-			verbose="on" classpathref="compile.path"/&#62
-&#60/target&#62<br></pre>
+<pre>&#60;target name="compile" description="--&#62;Compile the .java sources"&#62;
+		&#60;javac srcdir="${srcdir}" destdir="${builddir}" debug="on"
+			verbose="on" classpathref="compile.path"/&#62;
+&#60;/target&#62;<br></pre>
 
 </div>
 
 And finally the makejar job:
 <div id="ant">
-<pre>&#60target name="makejar" description="--&#62Make the jar file" depends="compile"&#62
-	&#60delete &#62
-		&#60fileset file="${distdir}/${pluginname}.jar"/&#62
-	&#60/delete&#62
-	&#60jar jarfile="${distdir}/${pluginname}.jar" manifest="etc/MANIFEST.MF"&gt;
-		&#60fileset dir="${builddir}" &#62&#60include name="**/*.class"/ &#62&#60/fileset&#62
-		&#60fileset dir="." &#62&#60include name = "name.properties"/&#62&#60/fileset&#62
-		&#60fileset dir="${srcdir}"&#62&#60include name = "**/*.properties"/&#62&#60/fileset&#62
-	&#60/jar&#62
-&#60/target&#62
+<pre>&#60;target name="makejar" description="--&#62;Make the jar file" depends="compile"&#62;
+	&#60;delete &#62;
+		&#60;fileset file="${distdir}/${pluginname}.jar"/&#62;
+	&#60;/delete&#62;
+	&#60;jar jarfile="${distdir}/${pluginname}.jar" manifest="etc/MANIFEST.MF"&gt;
+		&#60;fileset dir="${builddir}" &#62;&#60;include name="**/*.class"/ &#62;&#60;/fileset&#62;
+		&#60;fileset dir="." &#62;&#60;include name = "name.properties"/&#62;&#60;/fileset&#62;
+		&#60;fileset dir="${srcdir}"&#62;&#60;include name = "**/*.properties"/&#62;&#60;/fileset&#62;
+	&#60;/jar&#62;
+&#60;/target&#62;
 </pre>
 
 </div>
 
-It turns out we have almost the whole ant build file here!
-Inside the Ant file is also a clean job, which deletes then
-recreates the bin and dist folders.
+It turns out we have almost the whole ant build file here.
+Inside the Ant file is also a clean job and an init job, which delete and
+recreate the bin and dist folders respectively.
 <br>
 
 Astute readers will have noticed a reference to the manifest for the
@@ -154,19 +167,37 @@ specified in the ant build job. Also, the makejar job looks for the
 in the src directory tree.
 <br>
 
-Our next job will be to create our preferences.properties file in the
-source tree. This file will tell Xena what it is we can expect to find
+Our next job will be to create the OrgXPlugin class. This class will tell Xena what it is we can expect to find
 in the plugin. It specifies any normalisers, types, guessers, file
 namers, meta data package wrappers, help sets, basically anything that
-can be in a normaliser. For the moment, we will leave it almost
-entirely blank - the only thing we will include is the version number
-of our plugin.
+can be in a normaliser. It will need to extend the XenaPlugin class, found in the 
+au.gov.naa.digipres.xena.kernel.plugin package. For the moment, we will leave it almost
+entirely blank, we will just override the only two abstract methods in XenaPlugin - getName and getVersion.
 <br>
+<br>
+So, our OrgXPlugin.java file content will be:
+<div id="code">
+<pre>
+package au.gov.naa.digipres.xena.demo.orgx;
 
-So, our preferences.properties file content will be:
-<div id="properties">
-<pre>version = 2.0.0<br></pre>
+import au.gov.naa.digipres.xena.kernel.plugin.XenaPlugin;
 
+public class OrgXPlugin extends XenaPlugin {
+
+	public static final String ORGX_PLUGIN_NAME = "orgx";
+	
+	@Override
+	public String getName() {
+		return ORGX_PLUGIN_NAME;
+	}
+
+	@Override
+	public String getVersion() {
+		return "0.1";
+	}
+
+}
+</pre>
 </div>
 
 Now this file is expected to be in the JAR at the location:
@@ -177,7 +208,7 @@ it into that location in the source tree.
 So, several make directory commands later, we now have the folder:
 <pre>~/orgx_plugin/src/au/gov/naa/digipres/xena/demo/orgx<br></pre>
 
-And it contains a single file, that being "prefences.properties".
+This folder contains the single file "OrgXPlugin.java".
 To see that everything is going well, it is time to build our (empty)
 orgx plugin for the first time. In a command shell, at the location
 '~/orgx_plugin', type ant. If everything works, a JAR file, named
@@ -186,19 +217,18 @@ orgx.jar will now exist in the folder 'dist'. Running the command 'jar
 <div id="output">
 <pre>
 #jar -tvf orgx.jar
-0 Thu Feb 23 16:53:04 EST 2006 META-INF/
-106 Thu Feb 23 16:53:02 EST 2006 META-INF/MANIFEST.MF
-40 Thu Feb 23 12:35:10 EST 2006 name.properties
-0 Thu Feb 23 16:50:20 EST 2006 au/
-0 Thu Feb 23 16:50:26 EST 2006 au/gov/
-0 Thu Feb 23 16:50:30 EST 2006 au/gov/naa/
-0 Thu Feb 23 16:50:38 EST 2006 au/gov/naa/digipres/
-0 Thu Feb 23 16:50:44 EST 2006 au/gov/naa/digipres/xena/
-0 Thu Feb 23 16:50:50 EST 2006 au/gov/naa/digipres/xena/demo/
-0 Thu Feb 23 16:50:56 EST 2006 au/gov/naa/digipres/xena/demo/orgx/
-15 Thu Feb 23 16:51:28 EST 2006 au/gov/naa/digipres/xena/demo/orgx/preferences.properties
-</pre>
-</div>
+     0 Wed Nov 21 15:03:48 EST 2007 META-INF/
+   106 Wed Nov 21 15:03:46 EST 2007 META-INF/MANIFEST.MF
+     0 Wed Nov 21 15:03:46 EST 2007 au/
+     0 Wed Nov 21 15:03:46 EST 2007 au/gov/
+     0 Wed Nov 21 15:03:46 EST 2007 au/gov/naa/
+     0 Wed Nov 21 15:03:46 EST 2007 au/gov/naa/digipres/
+     0 Wed Nov 21 15:03:46 EST 2007 au/gov/naa/digipres/xena/
+     0 Wed Nov 21 15:03:46 EST 2007 au/gov/naa/digipres/xena/demo/
+     0 Wed Nov 21 15:03:46 EST 2007 au/gov/naa/digipres/xena/demo/orgx/
+   606 Wed Nov 21 15:03:46 EST 2007 au/gov/naa/digipres/xena/demo/orgx/OrgXPlugin.class
+    39 Wed Nov 21 09:56:50 EST 2007 name.properties
+</pre></div>
 Now it's time to write the Org X filenamer and meta data wrapper!
 </div>
 
