--- a/07_file_namer/filenamer.html
+++ b/07_file_namer/filenamer.html
@@ -163,10 +163,10 @@ Here are the user name and department code options and the implementations of th
 
 So we have our InfoProvider interface and an implementation that will be used in this step. Now we have to use the InfoProvider to
 construct our file names! So we will return to the OrgXFileNamer.java file to implement the makeNewXenaFile method. First we have
-to initialise a DemoInfoProvider so we can obtain our randomised user name and department code. Then all we have to do
-is piece together the various components of the filename, from our DemoInfoProvider and the given XenaInputSource, and create a new file
-with this filename in the given directory. We will also include a setInfoProvider method so that we can change which InfoProvider we are
-using at runtime. This will be important in Step 8.
+to define a DemoInfoProvider which we will use to obtain our randomised user name and department code. 
+We will include a setInfoProvider method so that we initialise which InfoProvider we are using at runtime. This will be important in Step 8.
+Then all we have to do is piece together the various components of the filename, from our DemoInfoProvider and the given XenaInputSource, 
+and create a new file with this filename in the given directory.
 <br><br>
 Here is the finished OrgXFileNamer.java file:
 
@@ -184,8 +184,12 @@ import au.gov.naa.digipres.xena.kernel.normalise.AbstractNormaliser;
 
 public class OrgXFileNamer extends AbstractFileNamer {
 
-<b>	private InfoProvider myInfoProvider = new DemoInfoProvider();
+<b>	private InfoProvider myInfoProvider = null;
 	private static char SEPARATOR_CHAR = '_';
+
+	public InfoProvider getInfoProvider() {
+		return myInfoProvider;
+	}
 
 	public void setInfoProvider(InfoProvider infoProvider) {
 		myInfoProvider = infoProvider;
@@ -209,13 +213,13 @@ public class OrgXFileNamer extends AbstractFileNamer {
 
 		//now to make an insanely long file name with all this stuff...
 		String outputFileName =
-		    noSlashFileName + SEPARATOR_CHAR + myInfoProvider.getUserName() + SEPARATOR_CHAR + myInfoProvider.getDepartmentCode() + SEPARATOR_CHAR
+		    noSlashFileName + SEPARATOR_CHAR + getInfoProvider().getUserName() + SEPARATOR_CHAR + getInfoProvider().getDepartmentCode() + SEPARATOR_CHAR
 		            + idFormatter.format(id) + "." + FileNamerManager.DEFAULT_EXTENSION;
 
 		File outputFile = new File(destinationDir, outputFileName);
 		while (outputFile.exists()) {
 			outputFileName =
-			    noSlashFileName + SEPARATOR_CHAR + myInfoProvider.getUserName() + SEPARATOR_CHAR + myInfoProvider.getDepartmentCode()
+			    noSlashFileName + SEPARATOR_CHAR + getInfoProvider().getUserName() + SEPARATOR_CHAR + getInfoProvider().getDepartmentCode()
 			            + SEPARATOR_CHAR + idFormatter.format(++id) + "." + FileNamerManager.DEFAULT_EXTENSION;
 			outputFile = new File(destinationDir, outputFileName);
 		}
@@ -329,7 +333,6 @@ Now that we have control over the names of our normalised files it's time move o
 which wraps our normalised data!
 
 </body>
-</head>
 </html>
 
 
