--- a/09_preferences/properties.html
+++ b/09_preferences/properties.html
@@ -13,7 +13,7 @@
 <p>
 The Xena Plugin Properties mechanism provides a way to set and retrieve settings from Xena plugins, and from an application using the plugin. The
 Properties code is found in the au.gov.naa.digipres.xena.kernel.properties package of the xena module.
-Each property is backed Java Preferences, and thus will persist across application sessions due to the use of the Windows registry, Linux
+Each property is backed by Java Preferences, and thus will persist across application sessions due to the use of the Windows registry, Linux
 temporary files etc. The properties can be set and retrieved directly using the PropertiesManager class (passing in the plugin name and property name),
  or using an extension of the PluginProperties class for a particular plugin (passing in the property name). PropertiesDialog can be used
  to automatically create a dialog (given a list of XenaProperties) containing a type-specific input for each property. This dialog will automatically
@@ -23,7 +23,7 @@ temporary files etc. The properties can be set and retrieved directly using the 
 <div id="aside">
 <h4>Property types</h4>
 <p>The PropertyType enumeration in the XenaProperty class lists the property types available. 
-These types (and associated PropertiesDialog input type) are:
+These types (and associated PropertiesDialog input type) are: </p>
 <ul>
 	<li><b>STRING_TYPE</b> - simple text field</li>
 	<li><b>INT_TYPE</b> - simple text field, which validates that a number has been entered</li>
@@ -33,9 +33,7 @@ These types (and associated PropertiesDialog input type) are:
 	<li><b>MULTI_OPTION_TYPE</b> - list from which the user may select many options</li>
 	<li><b>BOOLEAN_TYPE</b> - checkbox</li>
 </ul>
-</p>
 </div>
-
 
 <p>
 To demonstrate Properties we will add some user-configurable settings to the Meta-Data Wrapper created in the previous chapter. The user will be
@@ -73,7 +71,7 @@ public class OrgXProperties extends PluginProperties
 	
 	}
 }
-<pre></div>
+</pre></div>
 
 <p>The getName method should simply return a unique name to identify this plugin, and the getProperties method should simply return
 a locally defined List of XenaProperties:
@@ -111,7 +109,7 @@ public class OrgXProperties extends PluginProperties
 	
 	}
 }
-<pre></div>
+</pre></div>
 
 <p>So the only real work to be done in this class is in the initialiseProperties method, where each property will be defined and added
  to the properties list. The initialiseProperties method is automatically called by PropertiesManager directly after each PluginProperties
@@ -132,7 +130,7 @@ public class OrgXProperties extends PluginProperties
 	}
 </pre></div>
 
-<p>Now we can define each property one at a time. The basic process is:
+<p>Now we can define each property one at a time. The basic process is:</p>
 <ol>
 <li>Create XenaProperty object</li>
 <li>Use the PropertyManager method loadProperty to retrieve the stored value of this property (if previoulsly used).</li>
@@ -149,7 +147,7 @@ The XenaProperty constructor takes the follwing arguments:
 </ul>
        
 The User Name and Timestamp properties follow the basic process:
-</p>
+
 
 <div id="code"><pre>
 	@Override
@@ -209,11 +207,11 @@ The Header File property will require a custom validation method to check that t
 </p>
 <div id="aside">
 <p>
-The base XenaProperty validate method has the following form:
+The base XenaProperty validate method has the following form:</p>
 <pre>
 public void validate(String newValue) throws InvalidPropertyException, PropertyMessageException;
 </pre>
-The validate method should throw an InvalidPropertyException if the new value is invalid for some reason. The PropertyMessageException
+<p>The validate method should throw an InvalidPropertyException if the new value is invalid for some reason. The PropertyMessageException
 is used for cases where the new property value is valid, but the user still needs to be made aware of a message. 
 The base method checks that the new value is not null, and performs basic validation on INT_TYPE and BOOLEAN_TYPE properties, 
 ensuring that the inputs for each are numerical and boolean respectively. 
@@ -259,14 +257,17 @@ is thrown. The following code should be added to the initialiseProperties method
 </pre></div>
 
 <p>
-Finally, we need to update the preferences file so that the properties component will be loaded along with the rest of the plugin.
+Finally, we need to update the OrgXPlugin.java file so that the properties component will be loaded along with the rest of the plugin.
+We need to add the getPluginPropertiesList method:
 </p>
 
-<div id=preferences><pre>
-fileNamers = au.gov.naa.digipres.xena.demo.orgx.OrgXFileNamer
-filters= orgxFilter/au.gov.naa.digipres.xena.demo.orgx.OrgXMetaDataWrapper/au.gov.naa.digipres.xena.demo.orgx.OrgxUnwrapper
-<b>properties = au.gov.naa.digipres.xena.demo.orgx.OrgXProperties</b>
-version = 2.0.0
+<div id="code"><pre>
+<b>	@Override
+	public List<PluginProperties> getPluginPropertiesList() {
+		List<PluginProperties> propertiesList = new ArrayList<PluginProperties>();
+		propertiesList.add(new OrgXProperties());
+		return propertiesList;
+	}</b>
 </pre></div>
 
 
@@ -339,21 +340,39 @@ Now we are ready to modify OrgXMetaDataWrapper to use the new InfoProvider. Firs
 
 
 <p>
-Next we need to modify the getMyInfoProvider method so that it returns a PropertiesInfoProvider. It will create the provider on first call.
+Our new Properties component will be tested using the Xena application rather than a custom Java test class such as NormaliseTester. This
+means that we won't be able to load our InfoProvider at runtime because plugin loading and file normalisation in Xena are automated.
+So we will need to modify our getMyInfoProvider method so that it will create a PropertiesInfoProvider when it is first called, and just return
+this instance on subsequent calls.
 </p>
 
 <div id="code"><pre>
-    /**
+<b>    /**
      * @return Returns the myInfoProvider.
      */
     public InfoProvider getMyInfoProvider() {
-        <b>if (myInfoProvider == null)
-        {
+        if (myInfoProvider == null) {
         	PropertiesManager propManager = this.getMetaDataWrapperManager().getPluginManager().getPropertiesManager();
         	myInfoProvider = new PropertiesInfoProvider(propManager);
-        }</b>
+        }
         return myInfoProvider;
-    }
+    }</b>
+</pre></div>
+
+<p>A similar change will need to be made to the getMyInfoProvider method in the OrgXFileNamer class, the only difference to above
+is the use of the this.getFileNamerManager method rather than the this.getMetaDataWrapperManager() method.</p>
+
+<div id="code"><pre>
+<b>    /**
+     * @return Returns the myInfoProvider.
+     */
+    public InfoProvider getMyInfoProvider() {
+        if (myInfoProvider == null) {
+        	PropertiesManager propManager = this.getFileNamerManager().getPluginManager().getPropertiesManager();
+        	myInfoProvider = new PropertiesInfoProvider(propManager);
+        }
+        return myInfoProvider;
+    }</b>
 </pre></div>
 
 <p>
@@ -365,11 +384,11 @@ property values need to be retrieved from the InfoProvider:
     @Override
     public void startDocument() throws SAXException {
 
-        String departmentName = (getMyInfoProvider() != null ? getMyInfoProvider().getDepartmentName() : DEFAULT_DEPARTMENT);
-        String userName = (getMyInfoProvider() != null ? getMyInfoProvider().getUserName() : DEFAULT_USER);
-        
-        <b>boolean insertTimestamp = (getMyInfoProvider() != null ? getMyInfoProvider().isInsertTimestamp() : false);
-        File headerFile = (getMyInfoProvider() != null ? getMyInfoProvider().getHeaderFile() : null);</b>
+		String departmentName = myInfoProvider.getDepartmentName();
+		String userName = myInfoProvider.getUserName();
+
+		<b>boolean insertTimestamp = myInfoProvider.isInsertTimestamp();
+		File headerFile = myInfoProvider.getHeaderFile();</b>
 </pre></div>
 
 
@@ -377,7 +396,7 @@ property values need to be retrieved from the InfoProvider:
 And then the Header File and Timestamp tags need to be written out in a similar way to the other tags.
 </p> 
 <p>
-We check that the header file is exists and is a valid file (this is perhaps redundant as the custom validate method written above should
+We check that the header file exists and is a valid file (this is perhaps redundant as the custom validate method written above should
 ensure this, but it is possible that the file may have been deleted since the property was saved). If so then the contents
 of this file are added to the header file tag.
 </p>
@@ -390,7 +409,7 @@ is not written at all.
         <b>// Header
         try
         {
-	        if (headerFile != null && headerFile.exists() && headerFile.isFile())
+	        if (headerFile != null &amp;&amp; headerFile.exists() &amp;&amp; headerFile.isFile())
 	        {
 	        	StringBuffer headerBuffer = new StringBuffer();
 	        	BufferedReader reader = new BufferedReader(new FileReader(headerFile));
@@ -421,8 +440,28 @@ is not written at all.
         }</b>
 </pre></div>
 
+<p>Our one final job is to create some header files for testing. We will create two files, one that contains a postal address for OrgX,
+and another that contains OrgX's web address. We will create two files in the root 09_preferences directory called orgx_header_address.txt and
+orgx_header_web.txt. Insert the following into orgx_header_address.txt:
+</p>
+
+<div id="preferences"><pre>
+Normalised by OrgX, OrgX Building, 1 Smith St Canberra ACT 2600 AUSTRALIA
+</pre></div>
+
+<p>And insert the following into orgx_header_web.txt:</p>
+
+<div id="preferences"><pre>
+Xena Normalised by OrgX, xena@orgx.org, www.orgx.org
+</pre></div>
+
+
 <p>
-To test our new property-modifiable MetaDataWrapper it is best to use Xena Lite.
+To test our new property-modifiable MetaDataWrapper it is best to use the Xena application. For this step we will need the xena.jar file in a 
+specific place, it will need to be in the xena directory of the root plugin-howto directory. We will also need two plugins: the foo.jar plugin file produced 
+in Step 6, and the XML plugin. For instructions on building Xena and the XML plugin, please refer to the 
+<a href="http://xena.sourceforge.net/build.php">Xena build guide</a>. These plugins should be placed in the "plugins" directory in the xena directory
+which contains the xena.jar file.
 </p>
 
 <p>
@@ -439,25 +478,21 @@ This will build the orgx plugin (if it hasn't been previously built) and will ru
 
 <p>
 Go to the Tools->Plugin Preferences->OrgX menu. This will display a dialog containing inputs for the preferences we created in OrgXProperties 
-above. Input the following values, and click the OK button:
-
-<ul>
-<li><b>User Name</b> - Jack</li>
-<li><b>Timestamp</b> - Checked</li>
-<li><b>Department Name</b> - Finance</li>
-<li><b>Header File</b> - 9_properties/orgx_header_address.txt</li>
-</ul> 
+above. Input the following values (you will need to browse to the correct location of the header file), and click the OK button:
 </p>
 
+<img alt="OrgX Properties" id="OrgX Properties" src="./orgx-props-1.png"/>
+
+
 <p>
-Now, click the "Add Files" button and select a simple text file. As we are only interested in the meta data for this test, the file isn't important.
+Now, click the "Add Files" button and select the example_file.foo file in our data directory.
 Click the "Normalise" button to normalise the file. When finished, double-click on the entry in the Normaliser Results table which will display
 basic information about the normalised file. Now click the "Xena View" button, which will open a frame containing a representation of the normalised
 file. Use the drop-down list at the top-left of the frame to select the "Raw XML View". We can now see the meta data which has been added to the
 normalised file. The "meta" tag should look like this:
 </p>
 
-<div id="output"><pre>
+<div id="xml"><pre>
 &lt;meta&gt;
 &lt;orgx_header&gt;Normalised by OrgX, OrgX Building, 1 Smith St Canberra ACT 2600 AUSTRALIA&lt;/orgx_header&gt;
 &lt;timestamp&gt;Mon May 01 13:27:17 EST 2006&lt;/timestamp&gt;
@@ -472,20 +507,16 @@ normalised file. The "meta" tag should look like this:
 <p>
 Close the XenaViewer and Normaliser Results windows, and click the "New Session" button. We will now change the values of the properties in the 
 same manner as above, except this time set them to the following values:
-<ul>
-<li><b>User Name</b> - Jill</li>
-<li><b>Timestamp</b> - Unchecked</li>
-<li><b>Department Name</b> - Library</li>
-<li><b>Header File</b> - 9_properties/orgx_header_web.txt</li>
-</ul> 
 </p>
+
+<img alt="OrgX Properties" id="OrgX Properties" src="./orgx-props-2.png"/>
 
 <p>
 Normalise the same file again and bring up the Raw XML View of the normalised file using the method described above. The "meta" tag should
 now look like this:
 </p>
 
-<div id="output"><pre>
+<div id="xml"><pre>
 &lt;meta&gt;
 &lt;orgx_header&gt;Xena Normalised by OrgX, xena@orgx.org, www.orgx.org&lt;/orgx_header&gt;
 &lt;department&gt;Library&lt;/department&gt;
@@ -498,7 +529,7 @@ now look like this:
 
 </div>
 </body>
-</head>
+</html>
 
 
 
